src/objects/Apttus_Rebate__IncentivePayoutSchedule__c.object
<CustomObject>
    <description>Represents the payout for a particular incentive</description>
    <fields>
        <fullName>APTS_CreditMemo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Memo</label>
        <referenceTo>Apttus_Billing__CreditMemo__c</referenceTo>
        <relationshipLabel>Incentive Payout Schedules</relationshipLabel>
        <relationshipName>Incentive_Payout_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_LockIncentivePayoutSchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock Incentive Payout Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_ManualRebateCalculation__c</fullName>
        <formula>Apttus_Rebate__IncentiveId__r.APTS_ManualRebateCalculation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manual Rebate Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Rebate_PayoutAdvance__c</fullName>
        <label>Rebate Payout Advance</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Reset__c</fullName>
        <formula>IF (
ISPICKVAL( Approval_Status__c ,&quot;Rejected&quot;)
, 
HYPERLINK(&quot;/apex/APTS_ResetIncentivePayoutSchedule?id=&quot; &amp;Id, IMAGE(&quot;/resource/APTS_ResetStatus&quot;, &quot;Reset Status&quot;),&quot;_self&quot;), 
NULL)</formula>
        <label>Reset</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Organization__c</fullName>
        <description>Displays Sales Organization of the related Account. It is used in Rebate Payout by Account Reports</description>
        <formula>TEXT(Apttus_Rebate__AgreementId__r.Apttus__Account__r.Sales_Organization__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Approval Required</fullName>
                </value>
                <value>
                    <fullName>Approval Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__AgreementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated agreement</description>
        <inlineHelpText>ID of the associated agreement</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Incentive Payout Schedules</relationshipLabel>
        <relationshipName>PayoutSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__AgreementPayoutScheduleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated agreement payout schedule</description>
        <inlineHelpText>ID of the associated agreement payout schedule</inlineHelpText>
        <label>Agreement Payout Schedule</label>
        <referenceTo>Apttus_Rebate__AgreementPayoutSchedule__c</referenceTo>
        <relationshipLabel>Incentive Payout Schedules</relationshipLabel>
        <relationshipName>IncentivePayoutSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__BenefitAmountOverride__c</fullName>
        <description>The incentive benefit amount overridden by custom calculation</description>
        <inlineHelpText>The incentive benefit amount overridden by custom calculation</inlineHelpText>
        <label>Benefit Amount (Override)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__BenefitAmount__c</fullName>
        <description>The incentive benefit amount</description>
        <inlineHelpText>The incentive benefit amount</inlineHelpText>
        <label>Benefit Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__DeductionAmountOverride__c</fullName>
        <description>The incentive deduction amount overridden by custom calculation</description>
        <inlineHelpText>The incentive deduction amount overridden by custom calculation</inlineHelpText>
        <label>Deduction Amount (Override)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__DeductionAmount__c</fullName>
        <description>The incentive deduction amount</description>
        <inlineHelpText>The incentive deduction amount</inlineHelpText>
        <label>Deduction Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__IncentiveId__c</fullName>
        <description>ID of the associated incentive</description>
        <inlineHelpText>ID of the associated incentive</inlineHelpText>
        <label>Incentive</label>
        <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
        <relationshipLabel>Incentive Payout Schedules</relationshipLabel>
        <relationshipName>PayoutSchedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__PeriodDate__c</fullName>
        <description>The payout period date for a given schedule and is generated based on the incentive payout frequency and incentive effectivity period</description>
        <inlineHelpText>The payout period date for a given schedule and is generated based on the incentive payout frequency and incentive effectivity period</inlineHelpText>
        <label>Period Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__PeriodStartDate__c</fullName>
        <description>The period start date for a given schedule and is generated based on the incentive payout frequency and incentive effectivity period</description>
        <inlineHelpText>The period start date for a given schedule and is generated based on the incentive payout frequency and incentive effectivity period</inlineHelpText>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__Status__c</fullName>
        <description>The schedule status</description>
        <inlineHelpText>The schedule status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Incentive Payout Schedule</label>
    <nameField>
        <displayFormat>PS-{0000000000}</displayFormat>
        <label>Schedule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentive Payout Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>APTS_Prevent_Editing_Amount_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>if( ISPICKVAL( Approval_Status__c , &apos;Approved&apos;) &amp;&amp; ( ISCHANGED( Apttus_Rebate__BenefitAmount__c ) ||  ISCHANGED( Apttus_Rebate__BenefitAmountOverride__c )  ),
true,
 false)</errorConditionFormula>
        <errorMessage>Cannot edit Benefit Amount and Benefit Amount (Override) fields when Approval Status is &apos;Approved&apos;</errorMessage>
    </validationRules>
</CustomObject>